style.css
/* ... */
/* New styles */

body, header {
    background-image: linear-gradient(45deg,transparent,#F5F5F5),linear-gradient(120deg, #fccb90 0%, #d57eeb 100%) !important;
    background-attachment: fixed !important;
    background-size: 100vw !important;
    background-repeat: no-repeat !important;
}

/* .logo {
    filter: drop-shadow(0 0 1em rgba(0,0,0,0.5));
} */

/* body.home .logo h1 {
    color: white !important;
} */

.photo-grid {
    display: flex;
}

@media screen and (orientation:portrait) {
    .photo-grid {
        flex-wrap: wrap;
    }
    .photo-grid .col {
        padding-left: 0 !important;
        padding-right: 0 !important;
    }
}

.photo-grid .col {
    padding: 0 1em;
    width: fit-content;
}

.photo-grid .col:first-child {
    padding-left: 0;
}

.photo-grid .col:last-child {
    padding-right: 0;
}

.photo-grid img {
    width: 100%;
    margin: .5em 0;
}

.header {
    height: 80vh;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 60px;
}

.header h1 {
    font-size: 3em;
    font-weight: 900;
    letter-spacing: 1px;
}

.header h1 span {
    color: #b452f7;
}

.header h2 {
    color: #57727f;
}

.main-content-list.fullwidth-feature-items {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 2rem;
    grid-row-gap: 2rem;
}

.main-content-list.fullwidth-feature-items > a {
    text-decoration: none;
}

.main-content-list.fullwidth-feature-items .item {
    box-sizing: border-box;
    display: block;
    min-height: calc(100vh - 60px - 4rem);
    padding: 3rem;
    line-height: 1.5em;
    display: flex;
    align-items: flex-end;
    background-size: cover;
    background-position: center center;
    color: white;
}

.main-content-list.fullwidth-feature-items .item:first-child {
    margin-top: 0;
}

@media screen and (max-width: 950px) {
    .main-content-list.fullwidth-feature-items {
        grid-template-columns: 1fr;
    }
    .main-content-list.fullwidth-feature-items .item {
        grid-column-start: 1 !important;
        grid-column-end: 1 !important;
    }
}

.quicklinks {
    list-style: none;
    margin: 2rem 0;
    padding: 0;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

.quicklinks li {
    margin: 0.5em;
    min-width: max-content;
    background-size: cover;
    background-position: center center;
}

.quicklinks a {
    color: white;
    text-decoration: none;
    padding: 1em;
    line-height: 3em;
}

